--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,7 @@
     <div class="shop-section">
         <div class="box1 box">
             <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Revamp your home in style</h2>
             <div class="box-image" style="background-image:url('box1_image.jpg')"></div>
             <p>See more</p>
             </div>
@@ -90,7 +90,7 @@
         </div>
     <div class="box4 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Furniture</h2>
             <div class="box-image" style="background-image:url('box4_image.jpg')"></div>
             <p>See more</p>
     </div>
@@ -98,7 +98,7 @@
     
     <div class="box1 box">
         <div class="box-content">
-        <h2>Health & Personal Care</h2>
+        <h2>Electronic Gadgets</h2>
         <div class="box-image" style="background-image:url('box5_image.jpg')"></div>
         <p>See more</p>
         </div>
@@ -106,21 +106,21 @@
 
 <div class="box2 box">
     <div class="box-content">
-        <h2>Health & Personal Care</h2>
+        <h2>MakeUp</h2>
         <div class="box-image" style="background-image:url('box6_image.jpg')"></div>
         <p>See more</p>
         </div>
 </div>
 <div class="box3 box">
     <div class="box-content">
-        <h2>Health & Personal Care</h2>
+        <h2>New Arrivals</h2>
         <div class="box-image" style="background-image:url('box7_image.jpg')"></div>
         <p>See more</p>
         </div>
 </div>
 <div class="box4 box">
     <div class="box-content">
-        <h2>Health & Personal Care</h2>
+        <h2>Unique Products</h2>
         <div class="box-image" style="background-image:url('box8_image.jpg')"></div>
         <p>See more</p>
 </div>
